# compiler

./: .gitignore  CMakeLists.txt  README.md  array.c  array.h  ast.c  ast.h  code.asm  codegen.c  codegen.h  common.h  ex.txt  grammer.txt  main.c  memory.c  memory.h  parser.c  parser.h  scanner.c  scanner.h  semantic_check.c  semantic_check.h
tests/: test_codegen.c  test_codegen.h  test_ex.txt  test_parser.c  test_parser.h  test_scanner.c  test_scanner.h
utils/: array.c  array.h  file.c  file.h  table.c  table.h
